Add signup page

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,7 +32,7 @@
   	  </div>
     </form>
     <button onclick="location.href = '/signup'" class="btn">Sign up!</button>
-    <% if (error === 'Invalid_login') { %>
+    <% if (error === 'invalid_login') { %>
     <div class="alert alert-danger" style='margin-top:15px'>
       Invalid login credentials!
     </div>
