--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -14,9 +14,9 @@
     <h1>Create an account</h1>
     <form action="/createaccount" method="post" class="form-horizontal">
 	  <div class="form-group">
-	    <label for="username" class="col-sm-2 control-label">Username</label>
+	    <label for="login" class="col-sm-2 control-label">Login</label>
 	    <div class="col-sm-10">
-	      <input type="text" class="form-control" name="username" placeholder="New username" required>
+	      <input type="text" class="form-control" name="login" placeholder="New login" required>
   	    </div>
   	  </div>
   	  <div class="form-group">
@@ -37,6 +37,7 @@
         </div>
   	  </div>
     </form>
+	<button onclick="location.href = '/'" class="btn">Return to login</button>
     <% if (error === 'Invalid_username') { %>
     <div class="alert alert-danger" style='margin-top:15px'>
       Username already taken, please try again!
