--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
 <head>
 	<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js'></script>
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 	<meta name='viewport' content='width=device-width, initial-scale=1'></meta>
 </head>
 <body>
@@ -11,33 +11,33 @@
 		   You'll need something similar for the login page -->
   <div class="container">
     <h1>PennBook Login</h1>
-    <form action="/checklogin" method="post" class="form-horizontal">
-	  <div class="form-group">
-	    <label for="login" class="col-sm-2 control-label">Login</label>
+    <form action="/checklogin" method="post" class="form">
+	  <div class="form-group row">
+	    <label for="login" class="col-sm-2 col-form-label">Login</label>
 	    <div class="col-sm-10">
 	      <input type="text" class="form-control" name="login" placeholder="Login" required>
   	    </div>
   	  </div>
-  	  <div class="form-group">
-	    <label for="password" class="col-sm-2 control-label">Password</label>
+  	  <div class="form-group row">
+	    <label for="password" class="col-sm-2 col-form-label">Password</label>
 	    <div class="col-sm-10">
 	      <input type="password" class="form-control" name="password" placeholder="Password" required>
   	    </div>
   	  </div>
-  	  <div class="form-group">
+  	  <div class="form-group row">
   	    <div class="col-sm-offset-2 col-sm-10">
           <input type="submit" class="btn btn-primary" value="Login">		
         </div>
   	  </div>
     </form>
-    <button onclick="location.href = '/signup'" class="btn">Sign up!</button>
+    <button onclick="location.href = '/signup'" class="btn btn-link">Sign up!</button>
     <% if (error === 'invalid_login') { %>
     <div class="alert alert-danger" style='margin-top:15px'>
       Invalid login credentials!
     </div>
     <% } %>
   </div>
-  <div class='container' style='margin-top:10px'>
+  <div class='container'>
   Built by G36
   </div>
 </body>
