--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,25 +12,17 @@
   <div class="container">
     <h1>PennBook Login</h1>
     <form action="/checklogin" method="post" class="form">
-	  <div class="form-group row">
-	    <label for="login" class="col-sm-2 col-form-label">Login</label>
-	    <div class="col-sm-10">
-	      <input type="text" class="form-control" name="login" placeholder="Login" required>
-  	    </div>
-  	  </div>
-  	  <div class="form-group row">
-	    <label for="password" class="col-sm-2 col-form-label">Password</label>
-	    <div class="col-sm-10">
-	      <input type="password" class="form-control" name="password" placeholder="Password" required>
-  	    </div>
-  	  </div>
-  	  <div class="form-group row">
-  	    <div class="col-sm-offset-2 col-sm-10">
-          <input type="submit" class="btn btn-primary" value="Login">		
+        <div class="form-group">
+            <label for="login">Login</label>
+            <input type="text" class="form-control" name="login" placeholder="Login" required>
         </div>
-  	  </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" name="password" placeholder="Password" required>
+        </div>
+        <input type="submit" class="btn btn-primary" value="Login">		
+        <button onclick="location.href = '/signup'" class="btn btn-link">Sign up!</button>
     </form>
-    <button onclick="location.href = '/signup'" class="btn btn-link">Sign up!</button>
     <% if (error === 'invalid_login') { %>
     <div class="alert alert-danger" style='margin-top:15px'>
       Invalid login credentials!
