--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -11,61 +11,43 @@
 		   You'll need something similar for the login page -->
 	<div class="container">
 		<h1>Create an account</h1>
-		<form action="/createaccount" method="post" class="form-horizontal">
+		<form action="/createaccount" method="post" class="form">
 			<div class="form-row">
-				<div class="form-group">
-					<label for="login" class="col-sm-2 control-label">Login</label>
-					<div class="col-sm-4">
-						<input type="text" class="form-control" name="login" placeholder="New login" required>
-					</div>
+				<div class="form-group col-sm-6">
+					<label for="login">Login</label>
+					<input type="text" class="form-control" name="login" placeholder="New login" required>
 				</div>
-				<div class="form-group">
-					<label for="password" class="col-sm-2 control-label">Password</label>
-					<div class="col-sm-4">
-						<input type="password" class="form-control" name="password" placeholder="New password" required>
-					</div>
+				<div class="form-group col-sm-6">
+					<label for="password">Password</label>
+					<input type="password" class="form-control" name="password" placeholder="New password" required>
 				</div>
 			</div>
-		
 			<div class="form-group">
-				<label for="email" class="col-sm-2 control-label">Email</label>
-				<div class="col-sm-10">
-					<input type="text" class="form-control" name="email" placeholder="Email" required>
-				</div>
+				<label for="email">Email</label>
+				<input type="text" class="form-control" name="email" placeholder="Email" required>
 			</div>
 			<div class="form-row">
-				<div class="form-group">
-					<label for="firstname" class="col-sm-2 control-label">First name</label>
-					<div class="col-sm-4">
-						<input type="text" class="form-control" name="firstname" placeholder="First name" required>
-					</div>
+				<div class="form-group col-sm-4">
+					<label for="firstname">First name</label>
+					<input type="text" class="form-control" name="firstname" placeholder="First name" required>
 				</div>
-				<div class="form-group">
-					<label for="lastname" class="col-sm-2 control-label">Last name</label>
-					<div class="col-sm-4">
-						<input type="text" class="form-control" name="lastname" placeholder="Last name" required>
-					</div>
+				<div class="form-group col-sm-4">
+					<label for="lastname">Last name</label>
+					<input type="text" class="form-control" name="lastname" placeholder="Last name" required>
 				</div>
-			</div>
-			<div class="form-group">
-				<label for="affiliation" class="col-sm-2 control-label">Affiliation</label>
-				<div class="col-sm-10">
-					<input type="text" class="form-control" name="affiliation" placeholder="Affiliation" required>
-				</div>
-			</div>
-			<div class="form-group">
-				<label for="birthday" class="col-sm-2 control-label">Birthday</label>
-				<div class="col-sm-10">
+				<div class="form-group col-sm-4">
+					<label for="birthday">Birthday</label>
 					<input type="date" class="form-control" name="birthday" placeholder="Birthday" required>
 				</div>
 			</div>
 			<div class="form-group">
-				<div class="col-sm-offset-2 col-sm-10">
-					<input type="submit" class="btn btn-primary" value="Create account">		
-				</div>
+				<label for="affiliation">Affiliation</label>
+				<input type="text" class="form-control" name="affiliation" placeholder="Affiliation" required>
 			</div>
+			<input type="submit" class="btn btn-primary" value="Create account">		
+			<button onclick="location.href = '/'" class="btn btn-link">Return to login</button>
     	</form>
-	<button onclick="location.href = '/'" class="btn">Return to login</button>
+	
     <% if (error === 'Invalid_username') { %>
     <div class="alert alert-danger" style='margin-top:15px'>
       Username already taken, please try again!
