login and signup working

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -48,7 +48,7 @@
 			<button onclick="location.href = '/'" class="btn btn-link">Return to login</button>
     	</form>
 	
-    <% if (error === 'Invalid_username') { %>
+    <% if (error === 'invalid_username') { %>
     <div class="alert alert-danger" style='margin-top:15px'>
       Username already taken, please try again!
     </div>
