--- a/views/searchUsers.ejs
+++ b/views/searchUsers.ejs
@@ -6,45 +6,39 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 	<meta name='viewport' content='width=device-width, initial-scale=1'></meta>
 </head>
-
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="/homepage">PennBook</a>
+		<a class="navbar-brand" href="#">PennBook</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item active">
-					<a class="nav-link" href="/homepage">Home <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#">Link</a>
 				</li>
 			</ul>
-			<a class="nav-link" href="/profile/">Profile</a>
+			<form class="form-inline my-2 my-lg-0" action="/search" method="post">
+				<input class="form-control mr-sm-2" type="search" name="keyword" placeholder="Search people" aria-label="Search">
+				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+			</form>
+			<a class="nav-link" href="/profile/">My Profile</a>
 		</div>
 	</nav>
 	<div class="container">
 		<h1>
-			<%=firstname + " " + lastname%> 
+			Search results
 		</h1>
-		<div class="row">
-			<div class="col-sm-2">
-				Birthday: 
-			</div>
-			<div class="col-sm-4">
-				<%= birthday%>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-2">
-				Affiliation:
-			</div>
-			<div class="col-sm-4">
-				<%= affiliation%>
-			</div>
-		</div>
+		<ul>
+			<% for (user of users) {%>
+			<li>
+				<%= user.fullname.S %>
+			</li>
+			<% } %>
+		</ul>
 	</div>
     
 </body>
