--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -26,12 +26,13 @@
 				<input class="form-control mr-sm-2" type="search" name="keyword" placeholder="Search people" aria-label="Search">
 				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 			</form>
-			<a class="nav-link" href="/profile/">My Profile</a>
+			<a class="nav-link" href="/profile">My Profile</a>
+			<a class="nav-link" href="/logout">Logout</a>
 		</div>
 	</nav>
 	<div class="container">
 		<h1>
-			PennBook Homepage
+			Welcome to PennBook!
 		</h1>
 	</div>
     
