--- a/views/searchUsers.ejs
+++ b/views/searchUsers.ejs
@@ -32,6 +32,11 @@
 		<h1>
 			Search results
 		</h1>
+		<table class="table">
+			<tbody>
+				
+			</tbody>
+		</table>
 		<ul>
 			<% for (user of users) {%>
 			<li>
