--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -6,11 +6,31 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 	<meta name='viewport' content='width=device-width, initial-scale=1'></meta>
 </head>
+<style>
+	html, body {
+        height: 100%;
+    }
+
+	body {
+        display: -ms-flexbox;
+        display: -webkit-box;
+        display: flex;
+        -ms-flex-align: center;
+        -ms-flex-pack: center;
+        -webkit-box-align: center;
+        align-items: center;
+        -webkit-box-pack: center;
+        justify-content: center;
+        padding-top: 0px;
+        padding-bottom: 150px;
+        background-color: #f5f5f5;
+    }
+</style>
 <body>
 	<!-- This is a simple example template with a form that has a single input field. 
 		   You'll need something similar for the login page -->
 	<div class="container">
-		<h1>Create an account</h1>
+		<h1>Join PennBook!</h1>
 		<form action="/createaccount" method="post" class="form">
 			<div class="form-row">
 				<div class="form-group col-sm-6">
