--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -5,6 +5,8 @@
 	<!-- CSS only -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 	<meta name='viewport' content='width=device-width, initial-scale=1'></meta>
+	<link rel="stylesheet" href="/css/search.css">
+	<script src="/js/search.js"></script>
 </head>
 
 <body>
@@ -22,8 +24,10 @@
 					<a class="nav-link" href="#">Link</a>
 				</li>
 			</ul>
-			<form class="form-inline my-2 my-lg-0" action="/search" method="post">
-				<input class="form-control mr-sm-2" type="search" name="keyword" placeholder="Search people" aria-label="Search">
+			<form class="form-inline my-2 my-lg-0" action="/search" method="post" autocomplete="off">
+				<span class="autocomplete">
+					<input id="user-search" class="form-control mr-sm-2" type="search" name="keyword" placeholder="Search people" aria-label="Search">
+				</span>
 				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 			</form>
 			<a class="nav-link" href="/profile">My Profile</a>
@@ -37,4 +41,7 @@
 	</div>
     
 </body>
+<script>
+	autocomplete(document.getElementById("user-search"));
+</script>
 </html>
