--- a/web/views/homepage.ejs
+++ b/web/views/homepage.ejs
@@ -23,6 +23,9 @@
 				<li class="nav-item">
 					<a class="nav-link" href="#">Link</a>
 				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="/createChat">Start Chat<span class="sr-only">(current)</span></a>
+				</li>
 			</ul>
 			<form class="form-inline my-2 my-lg-0" action="/search" method="post" autocomplete="off">
 				<span class="autocomplete">
