--- a/web/views/createChat.ejs
+++ b/web/views/createChat.ejs
@@ -5,6 +5,7 @@
     <!-- CSS only -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 	<meta name='viewport' content='width=device-width, initial-scale=1'></meta>
+	<link rel="stylesheet" href="/css/search.css">
 </head>
 <style>
     html, body {
@@ -61,6 +62,34 @@
 <body class="text-center">
 	<!-- This is a simple example template with a form that has a single input field. 
 		   You'll need something similar for the login page -->
+		   
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<a class="navbar-brand" href="/homepage">PennBook</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item active">
+					<a class="nav-link" href="/homepage">Home <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Link</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="/createChat">Start Chat<span class="sr-only">(current)</span></a>
+				</li>
+			</ul>
+			<form class="form-inline my-2 my-lg-0" action="/search" method="post" autocomplete="off">
+				<span class="autocomplete">
+					<input id="user-search" class="form-control mr-sm-2" type="search" name="keyword" placeholder="Search people" aria-label="Search">
+				</span>
+				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+			</form>
+			<a class="nav-link" href="/profile">My Profile</a>
+			<a class="nav-link" href="/logout">Logout</a>
+		</div>
+	</nav>
     
     <form action="/makeChat" method="post" class="form-createchat">
         <h1>Form Chat</h1>
