--- a/web/views/profile.ejs
+++ b/web/views/profile.ejs
@@ -71,6 +71,7 @@
 		  var message = document.createElement("li");
       var message_temp = document.createElement("div");
       message_temp.setAttribute("style", "margin: 1cm");
+      message_temp.setAttribute("id", "post-" + post_id);
       var msg_content = document.createElement("div");
       msg_content.setAttribute("class", "card");
       msg_content.setAttribute("style", "width: 40rem");
@@ -82,6 +83,7 @@
       var name = document.createElement("a");
       name.setAttribute("href", "/profile/" + login);
       name.setAttribute("class", "card-text");
+      name.setAttribute("id", "user");
       name.innerText = login;
       var time = document.createElement("p");
       time.setAttribute("id", "timestamp");
@@ -143,33 +145,37 @@
     });
   }
   
+  function makeCommentHelper(comment, post_id) {
+	    const [user, ...message] = comment.split(', ');
+	    var comment = document.createElement("li");
+      var comment_temp = document.createElement("div");
+      comment_temp.setAttribute("class", "card");
+      comment_temp.setAttribute("style", "width: 40rem");
+      var text = document.createElement("p");
+      text.setAttribute("class", "card-text");
+      text.innerText = message;
+      var name = document.createElement("a");
+      name.setAttribute("href", "/profile/" + user);
+      name.setAttribute("class", "card-text");
+      name.innerText = user;
+      comment_temp.appendChild(text);
+      comment_temp.appendChild(name);
+      comment.appendChild(comment_temp);
+      $('#comments-' + post_id).prepend(comment);
+  }
+  
   function makeComment(post_id) {
     $.ajax({
       type: "POST",
       url: '/makeComment',
       data: {
+    	  post_user: $('#post-' + post_id).find('#user').text(),
         post_id: post_id,
         message: $('#comment-message-' + post_id).val(),
       },
       success: function(data) {
         if (data.result == 0) {
-          const [user, ...message] = data.data.split(', ');
-          
-          var comment = document.createElement("li");
-          var comment_temp = document.createElement("div");
-          comment_temp.setAttribute("class", "card");
-          comment_temp.setAttribute("style", "width: 40rem");
-          var text = document.createElement("p");
-          text.setAttribute("class", "card-text");
-          text.innerText = message;
-          var name = document.createElement("a");
-          name.setAttribute("href", "/profile/" + user);
-          name.setAttribute("class", "card-text");
-          name.innerText = user;
-          comment_temp.appendChild(text);
-          comment_temp.appendChild(name);
-          comment.appendChild(comment_temp);
-          $('#comments-' + post_id).prepend(comment);
+          makeCommentHelper(data.data, post_id);
         }
       }
     });
@@ -185,6 +191,19 @@
     		        if (i == 0) {
     		        	  mostRecentPost = post.timestamp.S;
     		        }
+    		    }
+    		    if ($('ul#comments-' + post.post_id.S + ' li').length + 1 != post.comments.SS.length) {
+    		    	  let current_comments = $('ul#comments-' + post.post_id.S + ' li');
+    		    	  let comments = [];
+    		    	  current_comments.each(function(idx, li) {
+    		    		    let elem = $(li);
+    		    		    comments.push(elem.find('a').text() + ', ' + elem.find('p').text());
+    		    		});
+    		    	  post.comments.SS.forEach(comment => {
+    		    		    if (comment != 'default' && !comments.includes(comment)) {
+    		    		    	  makeCommentHelper(comment, post.post_id.S);
+    		    		    }
+    		    	  });
     		    }
 		    }
 	  });
@@ -291,11 +310,11 @@
       <ul id="posts" style="list-style-type: none">
       <% posts.forEach(post => { %>
         <li>
-          <div style="margin: 1cm">
+          <div id="post-<%= post.post_id.S %>" style="margin: 1cm">
             <div class="card" style="width: 40rem">
               <div class="card-body">
                 <p class="card-text"><%= post.message.S %></p>
-                <a href='/profile/<%= post.login.S %>' class="card-text"><%= post.login.S %></a>
+                <a id="user" href='/profile/<%= post.login.S %>' class="card-text"><%= post.login.S %></a>
                 <p id="timestamp" class="card-text"><%= post.timestamp.S %></p>
               </div>
               <div class="card" style="width: 40rem">
