--- a/web/views/profile.ejs
+++ b/web/views/profile.ejs
@@ -10,6 +10,8 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
 	<meta name='viewport' content='width=device-width, initial-scale=1'></meta>
+	<link rel="stylesheet" href="/css/search.css">
+	<script src="/js/search.js"></script>
 </head>
 <script>
 	var curr_user = '<%= curr_user %>';
@@ -250,12 +252,14 @@
 				<li class="nav-item active">
 					<a class="nav-link" href="/homepage">Home <span class="sr-only">(current)</span></a>
 				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Link</a>
+				<li class="nav-item ">
+					<a class="nav-link" href="/createChat">Start Chat<span class="sr-only">(current)</span></a>
 				</li>
 			</ul>
-			<form class="form-inline my-2 my-lg-0" action="/search" method="post">
-				<input class="form-control mr-sm-2" type="search" name="keyword" placeholder="Search people" aria-label="Search">
+			<form class="form-inline my-2 my-lg-0" action="/search" method="post" autocomplete="off">
+				<span class="autocomplete">
+					<input id="user-search" class="form-control mr-sm-2" type="search" name="keyword" placeholder="Search people" aria-label="Search">
+				</span>
 				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 			</form>
 			<a class="nav-link" href="/profile">My Profile</a>
@@ -427,6 +431,9 @@
 		console.log(interests);
 	}
 
+	setInterests();
+	autocomplete(document.getElementById("user-search"));
+
 	$('.selectpicker').on('changed.bs.select', function (e) {
 		var interests = $('.selectpicker').val();
 		$.ajax({
@@ -438,7 +445,5 @@
 			}
 		});
 	});
-	
-	setInterests();
 </script>
 </html>
