--- a/web/views/profile.ejs
+++ b/web/views/profile.ejs
@@ -58,6 +58,11 @@
 					document.getElementById('friend-text').innerHTML = "Add Friend";
 					document.getElementById('friend-icon').className = "bi bi-person-fill-add";
 					document.getElementById('friend-button').className = "btn btn-primary";
+					$('#friend-' + curr_user).remove();
+					const index = friendsList.indexOf(curr_user);
+					if (index > -1) {
+					  friendsList.splice(index, 1);
+					}
 				}
 			})
 		} else {
@@ -72,10 +77,22 @@
 					document.getElementById('friend-text').innerHTML = "Friends";
 					document.getElementById('friend-icon').className = "bi bi-person-fill-check";
 					document.getElementById('friend-button').className = "btn btn-secondary";
+					addFriendHelper(curr_user);
 					are_friends = true;
 				}
 			})
 		}
+	}
+	
+	function addFriendHelper(friend) {
+		var newFriend = document.createElement("li");
+    newFriend.setAttribute("id", "friend-" + friend);
+    var text = document.createElement("a");
+    text.setAttribute("href", "/profile/" + friend);
+    text.innerText = friend;
+    newFriend.appendChild(text);
+    $('#friendlist').prepend(newFriend);
+    friendsList.push(friend);
 	}
 	
 	function updateFriendList() {
@@ -87,10 +104,6 @@
       },
       success: function(data) {
     	  let updatedFriends = data.friends;
-    	  console.log("1");
-    	  console.log(updatedFriends);
-    	  console.log("2");
-    	  console.log(friendsList);
     	  for (var i = 0; i < friendsList.length; i++) {
     		  let friend = friendsList[i];
     		  if (!updatedFriends.includes(friend)) {
@@ -101,18 +114,9 @@
     		}
     	  updatedFriends.forEach(friend => {
     		  if (!friendsList.includes(friend)) {    	          
-  	        var newFriend = document.createElement("li");
-  	        newFriend.setAttribute("id", "friend-" + friend);
-  	        var text = document.createElement("a");
-  	        text.setAttribute("href", "/profile/" + friend);
-  	        text.innerText = friend;
-  	        newFriend.appendChild(text);
-  	        $('#friendlist').prepend(newFriend);
-  			    friendsList.push(friend);
+  	        addFriendHelper(friend);
     		  }
     	  });
-    	  console.log("3");
-    	  console.log(friendsList);
       }
     })
 	}
@@ -261,12 +265,19 @@
   
   $(document).ready(function() {
 	  mostRecentPost = $('ul#posts li:first').find("#timestamp").text();
-	  
-	  checkFriends();
+	  let currFriends = $('ul#friendlist li')
+	  currFriends.each(function(idx, li) {
+		  friendsList.push($(li).find('a').text().trim());
+	  });
+	  if (curr_user != login) {
+	    checkFriends();
+	  }
 	  updateFriendList();
 	  refreshPosts();
 	  setInterval(function() {
-		  checkFriends();
+		  if (curr_user != login) {
+			  checkFriends();
+	    }
 		  updateFriendList();
 		  refreshPosts();
 	  }, 10000);
@@ -466,7 +477,7 @@
 <script>
 	function setInterests() {
 		$('.selectpicker').selectpicker('val', interests);
-		console.log(interests);
+		//console.log(interests);
 	}
 
 	$('.selectpicker').on('changed.bs.select', function (e) {
@@ -476,7 +487,7 @@
 			type: 'POST',
 			data: {interests: interests},
 			success: function(result) {
-				console.log(result);
+				//console.log(result);
 			}
 		});
 	});
